<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/health"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_health" />

    <Button
        android:id="@+id/ammunition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_ammunition" />

    <Button
        android:id="@+id/currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_money" />
</LinearLayout>